# wonky

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
demos/: CMakeLists.txt  full_screen.cc
include/wonky/: app.h  cell.h  esc.h  full_screen.h  screen.h  sizing.h  terminal.h  widget.h  wonky.h
src/: app.cc  full_screen.cc  screen.cc  terminal.cc  terminal_input.cc  terminal_input.h
